update project sync